--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "vue": "^3.5.24",
     "vue-router": "^4.6.3",
     "vue3-apexcharts": "^1.10.0"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^10.1.8",
+    "prettier": "^3.6.2"
   }
 }
