refactor: change from apexchart to lightweight chart

--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
   "dependencies": {
     "@nuxt/eslint": "1.10.0",
     "@nuxt/ui": "4.2.1",
-    "apexcharts": "^5.3.6",
     "decimal.js": "^10.6.0",
     "eslint": "^9.0.0",
+    "lightweight-charts": "^5.0.9",
     "mathjs": "^15.1.0",
     "nuxt": "^4.2.1",
     "typescript": "^5.6.3",
     "vue": "^3.5.24",
-    "vue-router": "^4.6.3",
-    "vue3-apexcharts": "^1.10.0"
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "eslint-config-prettier": "^10.1.8",
