--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@nuxt/eslint": "1.10.0",
     "@nuxt/ui": "4.2.1",
+    "@upstash/redis": "^1.35.6",
     "decimal.js": "^10.6.0",
     "eslint": "^9.0.0",
+    "ioredis": "^5.8.2",
     "lightweight-charts": "^5.0.9",
     "mathjs": "^15.1.0",
     "nuxt": "^4.2.1",
