--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lightweight-charts": "^5.0.9",
     "mathjs": "^15.1.0",
     "nuxt": "^4.2.1",
+    "nuxt-tradingview": "^1.3.4",
     "typescript": "^5.6.3",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
