--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^3.8.2",
     "@nuxt/eslint": "1.10.0",
     "@nuxt/ui": "4.2.1",
     "@upstash/redis": "^1.35.6",
