--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@nuxt/eslint": "1.10.0",
     "@nuxt/ui": "4.2.1",
     "@upstash/redis": "^1.35.6",
+    "better-sqlite3": "^12.5.0",
     "decimal.js": "^10.6.0",
     "eslint": "^9.0.0",
     "ioredis": "^5.8.2",
+    "katex": "^0.16.25",
     "lightweight-charts": "^5.0.9",
     "mathjs": "^15.1.0",
     "nuxt": "^4.2.1",
