--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/content": "^3.8.2",
     "@nuxt/eslint": "1.10.0",
     "@nuxt/ui": "4.2.1",
+    "@nuxtjs/supabase": "^2.0.1",
     "@upstash/redis": "^1.35.6",
     "better-sqlite3": "^12.5.0",
     "decimal.js": "^10.6.0",
