--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@nuxt/content": "^3.8.2",
     "@nuxt/eslint": "1.10.0",
     "@nuxt/ui": "4.2.1",
-    "@nuxtjs/supabase": "^2.0.1",
     "@upstash/redis": "^1.35.6",
     "better-sqlite3": "^12.5.0",
     "decimal.js": "^10.6.0",
@@ -26,7 +25,8 @@
     "nuxt-tradingview": "^1.3.4",
     "typescript": "^5.6.3",
     "vue": "^3.5.24",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "eslint-config-prettier": "^10.1.8",
