refactor: change coingecko status to binance status

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@ UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
 REDIS_HOST=
 REDIS_PORT=6379
-COINGECKO_API_KEY=
 SUPABASE_URL=""
 SUPABASE_KEY=""
+BINANCE_BASE_URL=https://api.binance.com
