--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@upstash/redis": "^1.35.6",
     "better-sqlite3": "^12.5.0",
     "decimal.js": "^10.6.0",
+    "echarts": "^6.0.0",
     "eslint": "^9.0.0",
     "ioredis": "^5.8.2",
     "katex": "^0.16.25",
@@ -25,6 +26,7 @@
     "nuxt-tradingview": "^1.3.4",
     "typescript": "^5.6.3",
     "vue": "^3.5.24",
+    "vue-echarts": "^8.0.1",
     "vue-router": "^4.6.3",
     "zod": "^4.1.13"
   },
