--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/content": "^3.8.2",
     "@nuxt/eslint": "1.10.0",
     "@nuxt/ui": "4.2.1",
+    "@nuxtjs/mdc": "^0.19.1",
     "@upstash/redis": "^1.35.6",
     "better-sqlite3": "^12.5.0",
     "decimal.js": "^10.6.0",
@@ -22,6 +23,7 @@
     "katex": "^0.16.25",
     "lightweight-charts": "^5.0.9",
     "mathjs": "^15.1.0",
+    "mermaid": "^11.12.2",
     "nuxt": "^4.2.1",
     "nuxt-tradingview": "^1.3.4",
     "typescript": "^5.6.3",
