fix: Binance API 451 Error on US server

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ NODE_ENV=local
 SUPABASE_URL=""
 SUPABASE_KEY=""
 BINANCE_BASE_URL=https://api.binance.com
+BINANCE_US_BASE_URL=https://api.binance.us
